Bug with bevel #53474

Closed
opened 2017-12-05 14:36:20 +01:00 by Tania · 17 comments

System Information
Windows 10, nvidia gtx 1050 ti

Blender Version
Broken: 2.79
Worked: -

Short description of error
Bevel is not working correctly. It happen if object bigger then 20m. Details in gif file.
bug.gif

Exact steps for others to reproduce the error
Blend file for example. Small object is ok, but big has a problem
example.blend

**System Information** Windows 10, nvidia gtx 1050 ti **Blender Version** Broken: 2.79 Worked: - **Short description of error** Bevel is not working correctly. It happen if object bigger then 20m. Details in gif file. ![bug.gif](https://archive.blender.org/developer/F1308435/bug.gif) **Exact steps for others to reproduce the error** Blend file for example. Small object is ok, but big has a problem [example.blend](https://archive.blender.org/developer/F1308534/example.blend)
Author

Changed status to: 'Open'

Changed status to: 'Open'
Author

Added subscriber: @tankoffsky1

Added subscriber: @tankoffsky1

Added subscriber: @FloridaJo

Added subscriber: @FloridaJo

I didn't see it go spastic like that, but it does make huge jumps on my machine.

I didn't see it go spastic like that, but it does make huge jumps on my machine.

Added subscriber: @akshay-19

Added subscriber: @akshay-19

This comment was removed by @akshay-19

*This comment was removed by @akshay-19*

Added subscriber: @mont29

Added subscriber: @mont29

Added subscriber: @VoucherCodes

Added subscriber: @VoucherCodes

This comment was removed by @VoucherCodes

*This comment was removed by @VoucherCodes*

Added subscriber: @ideasman42

Added subscriber: @ideasman42
Member

Added subscriber: @cmbasnett

Added subscriber: @cmbasnett
Member

Digging into this a bit, it appears that for certain offset values, the bevel edge offset_l and offset_r values are being set to 0.0 rather than the user-specified offset.

It's easy to see this in action by setting a breakpoint at this line. That block of code will basically only run when the incorrect behavior is exhibited on the example model given.

Digging into this a bit, it appears that for certain offset values, the bevel edge `offset_l` and `offset_r` values are being set to `0.0` rather than the user-specified offset. It's easy to see this in action by setting a breakpoint [at this line](https://developer.blender.org/diffusion/B/browse/master/source/blender/bmesh/tools/bmesh_bevel.c;50ef25d73f987f1b6973fa26b7349c649ac23567$1857). That block of code will basically only run when the incorrect behavior is exhibited on the example model given.

Added subscriber: @mano-wii

Added subscriber: @mano-wii

The problem is in the is_outside_edge function. It does not seem a good idea to use an epsilon to compare floats in that case :\

The problem is in the `is_outside_edge` function. It does not seem a good idea to use an epsilon to compare floats in that case :\
Member

Added subscriber: @howardt

Added subscriber: @howardt

This issue was referenced by bb30ce0f0b

This issue was referenced by bb30ce0f0bf13e519d5a34707965fde3f57eb185
Member

Changed status from 'Open' to: 'Resolved'

Changed status from 'Open' to: 'Resolved'
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
10 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#53474
No description provided.